--- a/sections/results.tex
+++ b/sections/results.tex
@@ -94,7 +94,7 @@ $s=$ 0.75                                    & $    42$& $    31$& $    -1<\fnl<
 Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. \mout{As expected, non-linear nine maps yields the smallest maximum likelihood estimate of $\fnl=-13$}. The non-linear three maps approach returns a best-fitting estimate of \mr{$\fnl=27$} with the $68\%(95\%)$ confidence of \mr{$17(6)<\fnl <40(53)$} and \mr{$\chi^{2}=33.9$}. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of \mr{$\fnl=14$} with the error of \mr{$5(-6)<\fnl<26(38)$}. The non-linear nine maps gives an \mr{asymmetric} posterior with the marginalized mean \mr{$\fnl=-17$}, \mr{and the smallest best-fitting} estimate \mr{of $\fnl=-13$} with the error of \mr{$-31(-44)<\fnl<-3(9)$}. \mr{The disparities in the best-fitting estimates can be linked to over-correction, mirroring the effects observed in the mocks (refer to Figure \ref{fig:contmcmc}). Consequently, caution is advised when considering the uncalibrated values. Without adjusting for over-correction, non-linear four maps and non-linear nine maps recover zero $\fnl$ within $95\%$ and $68\%$ confidence, respectively. However, the non-linear method with three maps exhibits tension with $\fnl=0$ at a confidence level of $99.5$ percent.}
 
 \begin{table*}
-    \caption{The uncalibrated best-fitting and marginalized mean estimates for $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after correcting for systematics. The estimates are not calibrated for over-correction, and thus are subject to mitigation systematics. The number of degrees of freedom is 34 (37 data points - 3 parameters). The lowest mode is $\ell=2$ and the covariance matrix is from the $\fnl=0$ clean mocks (no mitigation) except for the case with '+ Cov' in which the covariance matrix is from the $\fnl=76.9$ clean mocks (no mitigation). \mr{We fix $p=1$ for all cases and $s=0.945$ for DESI, $0.943$ for DECaLS North (and South), and $0.951$ for BASS+MzLS.}\mc{Add the joint result by combining the data likelihoods.}}
+    \caption{The uncalibrated best-fitting and marginalized mean estimates for $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after correcting for systematics. The estimates are not calibrated for over-correction, and thus are subject to mitigation systematics. The number of degrees of freedom is 34 (37 data points - 3 parameters) \mr{for all cases except the case that combines the data at the likelihood level, `BASS+MzLS+DECaLS', in which the dof is 104 ($3\times37-7$)}. The lowest mode is $\ell=2$ and the covariance matrix is from the $\fnl=0$ clean mocks (no mitigation) except for the case with '+ Cov' in which the covariance matrix is from the $\fnl=76.9$ clean mocks (no mitigation). \mr{We fix $p=1$ for all cases and $s=0.945$ for DESI, $0.943$ for DECaLS North (and South), and $0.951$ for BASS+MzLS.}}
     \label{tab:dr9method}
    %\centerline{%     
     \begin{tabular}{lllllll}
@@ -114,6 +114,7 @@ DESI & Nonlinear Four Maps              & $    14$& $    15$& $     5<\fnl<    2
 DESI (imag. cut) & Nonlinear Nine Maps  & $   -25$& $   -22$& $   -37<\fnl<    -7$& $   -49<\fnl<     6$ &   37.7\\
 DESI (comp. cut) & Nonlinear Nine Maps  & $   -24$& $   -23$& $   -35<\fnl<   -10$& $   -46<\fnl<     2$ &   36.3\\
 DESI & Nonlinear Nine Maps+$f_{\rm NL}=76.9$ Cov& $   -11$& $   -15$& $   -30<\fnl<    0$& $   -43<\fnl<    12$ &   37.4\\
+BASS+MzLS+DECaLS & Nonlinear Nine Maps& $   -31$& $   -26$& $   -41<\fnl<    -9$& $   -53<\fnl<     5$ &  114.2\\
    \hline
 BASS+MzLS & Nonlinear Three Maps        & $    13$& $    16$& $    -6<\fnl<    38$& $   -28<\fnl<    64$ &   34.9\\
 BASS+MzLS & Nonlinear Four Maps         & $    10$& $    12$& $   -11<\fnl<    34$& $   -35<\fnl<    59$ &   34.1\\
@@ -169,7 +170,7 @@ Now we proceed to perform some robustness tests and assess how sensitive the $\f
 
 \item \textbf{Linear methods}: \mr{Even though the linear methods show remaining systematics (e.g., against depth in z as shown in Figure \ref{fig:nbarmock}), we obtain identical constraints from \textit{linear four maps} and \textit{linear nine maps}, respectively, $20(9)<\fnl<45(58)$ and $19(9)<\fnl<43(57)$ at $68\%(95\%)$ confidence. For the linear treatment methods, the probability of $\fnl$ being greater than zero is erroneously $99.9$ per cent. Any attempt to account for the over-correction would elevate this probability even further. The overestimation of $\fnl$ can be attributed to an increase in systematic contamination.}
 %
-\item \textbf{Imaging regions}: We compare how our constraints from fitting the power spectrum of the whole DESI footprint compares to that from the power spectrum of each imaging region individually, namely BASS+MzLS, DECaLS North, and DECaLS South. Figure~\ref{fig:mcmc_dr9reg} shows the $68\%$ and $95\%$ probability contours on $\fnl$ and $b$ from each individual region, compared with that from DESI. The cleaning method here is \textit{non-linear \mr{nine} maps}, and the covariance matrices are estimated from the $\fnl=0$ mocks. The bias in DECaLS North is lower than the ones from DECaLS South and BASS+MzLS, which might indicate some remaining systematic effects that could not be mitigated with the available imaging systematic maps. This is because given the negative correlation between $b$ and $\fnl$, a larger value of $\fnl$ due to excess clustering power needs to be compensated by a smaller value of $b$. Overall, we find that the constraints from analyzing each imaging survey separately are consistent with each other and DESI within $68\%$ confidence. \mout{Ignoring the over-correction effect, we find that the results from the DECaLS North region to be the only one that finds PNG nonzero at greater than 95\%, which motivates follow-up studies with the spectroscopic sample of LRGs in DECaLS North.}
+\item \textbf{Imaging regions}: We compare how our constraints from fitting the power spectrum of the whole DESI footprint compares to that from the power spectrum of each imaging region individually, namely BASS+MzLS, DECaLS North, and DECaLS South. Figure~\ref{fig:mcmc_dr9reg} shows the $68\%$ and $95\%$ probability contours on $\fnl$ and $b$ from each individual region, compared with that from DESI. The cleaning method here is \textit{non-linear \mr{nine} maps}, and the covariance matrices are estimated from the $\fnl=0$ mocks. The bias in DECaLS North is lower than the ones from DECaLS South and BASS+MzLS, which might indicate some remaining systematic effects that could not be mitigated with the available imaging systematic maps. This is because given the negative correlation between $b$ and $\fnl$, a larger value of $\fnl$ due to excess clustering power needs to be compensated by a smaller value of $b$. Overall, we find that the constraints from analyzing each imaging survey separately are consistent with each other and DESI within $68\%$ confidence. \mr{We also consider combining the data at the likelihood level (`BASS+MzLS+DECaLS'). In this case the total number of data points is $111$ ($3\times 37$). We allow the bias and shotnoise paramters to vary independently for each sub-region but use a single and common $\fnl$ value, which brings the total number of free parameters to $7$ and the number of degrees of freedom to $104$. We obtain a best-fitting estimate of $\fnl=-31$ with $\chi^{2}=114.2$ and $68\%$ ($95\%$) confidence interval of $-41(-53) < \fnl < 9(5)$. Compared with our fiducial analysis which combines the data at the map level, we observe around $13\%$ loss in constraining power.}\mout{Ignoring the over-correction effect, we find that the results from the DECaLS North region to be the only one that finds PNG nonzero at greater than 95\%, which motivates follow-up studies with the spectroscopic sample of LRGs in DECaLS North.}
 
 \item \textbf{Stellar density template (\textit{nStar})}: When not accounting for over-correction, adding the stellar density map appears to result in significant changes in the $\fnl$ constraints, e.g., compare non-linear three maps with non-linear four maps in Table \ref{tab:dr9method}. But these changes disappear when we account for the mitigation bias and we find \mout{all}\mr{both} methods recover the same maximum likelihood estimate for \mr{$\fnl \sim 46$} within $69\%$ confidence, see Table \ref{tab:dr9methodcalib}, which implies that these changes can be associated with the over-correction issue from the chance correlations between the stellar density map and large-scale structure.
 
