--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -15,6 +15,6 @@ In our fiducial analysis, \mr{which includes a non-linear treatment of systemati
 
 \mr{Although being essential for the mitigation of imaging systematics, the template-based approach inevitably removes some of the large-scale clustering information. One of the primary highlights of this work is that we present a strategy to calibrate the systematic mitigation's impact on the inferred $\fnl$. As we increase the number of maps for mitigation, more of the power spectrum is removed, introducing a larger bias to the $\fnl$ posterior distribution. Our mock tests suggest that this bias is $\fnl$-dependent, such that the mocks with larger $\fnl$ experience a more substantial reduction in the low$-\ell$ power due to systematic mitigation. Therefore, it is crucial to calibrate for this effect using simulations that have gone through the same treatment methods and are subject to the same over-correction effect.}
 
-\mr{We conduct regressions using a smaller set of maps, including Galactic extinction, depth in the z band, and astronomical seeing in the r band (nonlinear three maps) to retain some constraining power. Additionally, we consider an additional map for local stellar density (nonlinear four maps). Using three or four maps, we can qualitatively mitigate systematic trends in the mean galaxy density and cross correlations of the galaxy density field and imaging property maps (see Section \ref{sec:systests}). These methods do not degrade the error on $\fnl$ as much as the fiducial method which used nine maps. However, we realize that a quantitative assessment of the residual trends against imaging property maps depends on the covariance matrices and, notably, the $\fnl$ value used for creating the mocks. Also, the mitigation methods change the covariance matrices. For instance, when we measure the residuals for the data with non-linear three maps, we should use the covariance from the mocks that have received the same treatment method. Our findings highlight the importance of exploring, developing, and validating alternative mitigation approaches to avoid over-correction for a robust analysis of local PNG.}
+\mr{As a greater flexibility in the mitigation increases the over-correction and decreases the statistical power, we tested if we can reduce the flexibility in our method by using a smaller set of maps, including Galactic extinction, depth in the z band, and astronomical seeing in the r band (nonlinear three maps) to retain some constraining power. Additionally, we consider an additional map for local stellar density (nonlinear four maps). Using three or four maps, we can qualitatively mitigate systematic trends in the mean galaxy density and cross correlations of the galaxy density field and imaging property maps (see Section \ref{sec:systests}). These methods do not degrade the error on $\fnl$ as much as the fiducial method which used nine maps. However, when applying our null-tests that are applied in order to detect residual systematic variance (see \ref{sec:systests}), we obtain passing results only for the nonlinear nine map case. In this work, we found updating the covariance matrix for each particular variation (e.g., the mitigation method applied) was important in order to obtain a similar $\chi^2$ of the null test when applied to the mocks and hence self-consistently obtain a $p$-value for the null test. Another important conclusion from applying our null tests to mocks is that the mean density contrast test is less sensitive to the $\fnl$ value for the mocks than the angular cross-power. Given the amount of $\fnl$ constraining power that we lose when applying the nine map regression (the uncertainties approximately double), our findings highlight the importance of exploring, developing, and validating alternative mitigation approaches to avoid over-correction for a robust analysis of local PNG.}
 
-Our analysis can be considered as the first attempt to identify major systematics in DESI, so we can be ready for constraining $\fnl$ with DESI spectroscopy. Internal DESI tests of the photometric calibration were unable to uncover DESI-specific issues, e.g., when comparing to Gaia data. The most significant trends that we find are with the E(B-V) map. The source of such a trend would be a mis-calibration of the E(B-V) map itself or the coefficients applied to obtain Galactic extinction corrected photometry. Such a mis-calibration would plausibly be proportional in amplitude to the estimated E(B-V) map, though it may not have E(B-V)’s spatial distribution. \mout{In order to explain the $\fnl$ signal we measure, such an effect would need to be approximately twice that of the trend we find with E(B-V)}. There are ongoing efforts within DESI to obtain improved Galactic extinction information, which will help \mr{us address systematics}\mout{establish if this is indeed the cause}. \mr{Additionally, cross-correlations of the DESI LRG density with the CMB lensing map is more stable in terms of systematics and can complement the results presented in this work. Additionally, we can further avoid the over-fitting issue by combining our neural network-based treatment method with forward-modeling techniques, such as Obiwon \citep{kong2020}, but we will leave that for future work.} 
+Our analysis can be considered as the first attempt to identify major systematics in DESI, so we can be ready for constraining $\fnl$ with DESI spectroscopy. Internal DESI tests of the photometric calibration were unable to uncover DESI-specific issues, e.g., when comparing to Gaia data. The most significant trends that we find are with the E(B-V) map. The source of such a trend would be a mis-calibration of the E(B-V) map itself or the coefficients applied to obtain Galactic extinction corrected photometry. Such a mis-calibration would plausibly be proportional in amplitude to the estimated E(B-V) map, though it may not have E(B-V)’s spatial distribution. \mout{In order to explain the $\fnl$ signal we measure, such an effect would need to be approximately twice that of the trend we find with E(B-V)}. There are ongoing efforts within DESI to obtain improved Galactic extinction information, which will help \mr{us address systematics}\mout{establish if this is indeed the cause}. \mr{Additionally, cross-correlations of the DESI LRG density with the CMB lensing map is more stable in terms of systematics and can complement the results presented in this work. We can further avoid the over-fitting issue by combining our neural network-based treatment method with forward-modeling techniques, such as Obiwon \citep{kong2020}, but we will leave that for future work.} 
