Updates from Overleaf

--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -1,7 +1,7 @@
 \section{Extra robustness tests}
 
 \subsection{Scale dependent systematics}\label{sec:scalesys}
-Our fiducial cross power spectrum diagnostic (equation \ref{eq:cx_chi2}) uses harmonic modes up to $\ell=20$, which determines the smallest scale used for characterizing residual systematic errors. To investigate the statistical significance of the cross power spectrum's $\chi^{2}$, we examine its dependence on the largest harmonic mode $\ell_{\rm max}$. We extend $\ell_{\rm max}$ from $20$ to $100$, where the latter scale corresponds to density fluctuations on scales smaller than $2$ degrees. Figure \ref{fig:chi2cellextend} shows the median of the \mr{normalized} cross power spectrum's $\chi^{2}$ from the clean $\fnl=0$ mocks as the highest mode $\ell_{\rm max}$ increases from $20$ to $100$ (represented by the solid line). The pink circles represent the $\chi^{2}$ values for the DESI LRG targets cleaned with the non-linear nine maps method. Overall, we find that for all scales up to $\ell=100$, the nonlinear nine maps approach yields consistent values with the clean mocks.
+To investigate the statistical significance of the cross power spectrum's $\chi^{2}$, we examine its dependence on the largest harmonic mode $\ell_{\rm max}$. Our fiducial cross power spectrum diagnostic (equation \ref{eq:cx_chi2}) uses harmonic modes up to $\ell=20$, which determines the smallest scale used for characterizing residual systematic errors. We extend $\ell_{\rm max}$ from $20$ to $100$, where the latter scale corresponds to density fluctuations on scales smaller than $2$ degrees. Figure \ref{fig:chi2cellextend} shows the median of the \mr{normalized} cross power spectrum's $\chi^{2}$ from the clean $\fnl=0$ mocks \mr{after non-linear nine maps} as the highest mode $\ell_{\rm max}$ increases from $20$ to $100$ (represented by the solid line). The pink circles represent the $\chi^{2}$ values for the DESI LRG targets cleaned with the non-linear nine maps method. Overall, we find that for all scales up to $\ell=100$, the nonlinear nine maps approach yields consistent values with the clean mocks.
 
 \begin{figure}
 \centering
@@ -18,7 +18,7 @@ M_{\ell \ell^{\prime}} = \frac{2\ell^{\prime}+1}{4\pi} \sum_{\ell^{\prime\prime}
 0 & 0 & 0
 \end{pmatrix},
 \end{equation}
-\mr{where the last term in the right hand side represents the Wigner 3-j symbol (or Clebsch-Gordan coefficient), and is calculated using \textsc{SymPy} \citep{sympy2017}. We benchmark our code against the publicly available software, \textsc{NaMaster}\footnote{\href{https://github.com/LSSTDESC/NaMaster}{https://github.com/LSSTDESC/NaMaster}} \citep{2019MNRAS.484.4127A}. Figure \ref{fig:window_conv} illustrates the different approaches to account for the mode-mode coupling caused by the DESI survey window for two arbitrary values of $\fnl$. The red shade represents the 68\% dispersion of the $\fnl=76.9$ mocks. For $\fnl=0$, our \textit{config-space} convolution of the window agrees with the \textit{$\ell$-space} convolution approach of \textsc{NaMaster}. The config-space approach yields a noisy result for $\fnl=76.9$.}
+\mr{where the last term in the right hand side represents the Wigner 3-j symbol (or Clebsch-Gordan coefficient), and is calculated using \textsc{SymPy} \citep{sympy2017}. We benchmark our code against the publicly available software, \textsc{NaMaster}\footnote{\href{https://github.com/LSSTDESC/NaMaster}{https://github.com/LSSTDESC/NaMaster}} \citep{2019MNRAS.484.4127A}. Figure \ref{fig:window_conv} illustrates various approaches to address the mode-mode coupling resulting from the DESI survey window at two arbitrary values of $\fnl$. The red shade represents the 68\% dispersion of the $\fnl=76.9$ mocks. When $\fnl=0$, our \textit{config-space} convolution of the window aligns with the \textit{$\ell$-space} convolution approach. However, when $\fnl=76.9$, both the config-space and \textsc{NaMaster} $\ell$-space methods yield a convoluted power spectrum with noticeable noise-like numerical artifacts on large scales, therefore possibly in a $\fnl$-dependent manner. To assess the impact of these discrepancies on our $\fnl$ constraints, we fit the clustering of the DESI LRG targets, disregarding the integral constraint effect. The best-fitting estimates of $\fnl$ will be biased, but our focus is on understanding the relative impact on $\fnl$ between the two approaches. For both config-space and $\ell$-space methods, we obtain a similar minimum $\chi^{2}$ value of $39.6$ with $34$ degrees of freedom. Notably, the posterior width for the config-space approach is slightly larger than that of the $\ell$-space by $10\%$. The absolute difference in the best-fitting estimates of $\fnl$ between the two cases is less than $1.1$, considered negligible relative to the statistical precision of our measurements.}
 
 
 \begin{figure}
