--- a/sections/acknowledgement.tex
+++ b/sections/acknowledgement.tex
@@ -1,6 +1,6 @@
 \section*{Acknowledgements}
 We would like to thank Douglas Finkbeiner for feedback on an early version of the manuscript; Violeta Gonzalez-Perez for handling the DESI internal review process; Tanveer Karim, Sukhdeep Singh, Ahmad Shamloumehr, and Reza Katebi for helpful discussions; and Rongpu Zhou for \mr{estimating the slope of the number counts and} providing the maps for galaxy density and imaging systematics. MR would like to thank Ohio State's Center for Cosmology and AstroParticle Physics, in particular, John Beacom and Lisa Colarosa, for their hospitality and support. MR is supported by the U.S. Department of Energy grants DE-SC0021165 and DE-SC0011840. H-JS acknowledges support from the U.S. Department of Energy, Office of Science, 
-Office of High Energy Physics under grant No. DE-SC0019091 and No. DE-SC0023241. FB is a University Research Fellow, and has received funding from the European Research Council (ERC) under the European Union’s Horizon 2020 research and innovation program (grant agreement 853291). BB-K is supported by the project \begin{CJK}{UTF8}{mj}우주거대구조를 이용한 암흑우주 연구\end{CJK} (``Understanding Dark Universe Using Large Scale Structure of the Universe’’), funded by the Ministry of Science of the Republic of Korea. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{OhioSupercomputerCenter1987}. This research has made substantial use of the arXiv preprint server, NASA’s Astrophysics Data System, Github's online software development platform, and many open-source software, such as Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, and Jupyter. 
+Office of High Energy Physics under grant No. DE-SC0019091 and No. DE-SC0023241. AP acknowledges support from the UK Science and Technology Facilities Council (STFC) under grant numbers ST/V000594/1 and from the European Union’s Horizon Europe program under the Marie Skłodowska-Curie grant agreement 101068581. FB is a University Research Fellow, and has received funding from the European Research Council (ERC) under the European Union’s Horizon 2020 research and innovation program (grant agreement 853291). BB-K is supported by the project \begin{CJK}{UTF8}{mj}우주거대구조를 이용한 암흑우주 연구\end{CJK} (``Understanding Dark Universe Using Large Scale Structure of the Universe’’), funded by the Ministry of Science of the Republic of Korea. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{OhioSupercomputerCenter1987}. This research has made substantial use of the arXiv preprint server, NASA’s Astrophysics Data System, Github's online software development platform, and many open-source software, such as Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, and Jupyter. 
 
 
 This material is based upon work supported by the U.S. Department of Energy (DOE), Office of Science, Office of High-Energy Physics, under Contract No. DE–AC02–05CH11231, and by the National Energy Research Scientific Computing Center, a DOE Office of Science User Facility under the same contract. Additional support for DESI was provided by the U.S. National Science Foundation (NSF), Division of Astronomical Sciences under Contract No. AST-0950945 to the NSF's National Optical-Infrared Astronomy Research Laboratory; the Science and Technology Facilities Council of the United Kingdom; the Gordon and Betty Moore Foundation; the Heising-Simons Foundation; the French Alternative Energies and Atomic Energy Commission (CEA); the National Council of Science and Technology of Mexico (CONACYT); the Ministry of Science and Innovation of Spain (MICINN), and by the DESI Member Institutions: \href{https://www.desi.lbl.gov/collaborating-institutions}{https://www.desi.lbl.gov/collaborating-institutions}.
