--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -1,6 +1,6 @@
 % If you need two or more lines of authors, add an extra line using \newauthor
 
-\author[M. Rezaie et al.]{Mehdi Rezaie$^{1,2}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,4}$, Hui Kong$^{5}$, \newauthor Anna Porredon$^{6}$, Lado Samushia$^{1}$, Edmond Chaussidon$^{7}$, Alex Krolewski$^{8,9,10}$, \newauthor Arnaud de Mattia$^{7}$, Florian Beutler$^{6}$, Jessica Nicole Aguilar$^{4}$, Steven Ahlen$^{11}$, \newauthor Shadab Alam$^{12}$, Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{13}$, Jose Bermejo-Climent$^{14}$, \newauthor David Brooks$^{15}$, Todd Claybaugh$^{4}$, Shaun Cole$^{16}$, Kyle Dawson$^{17}$, \newauthor Axel de la Macorra$^{18}$, Peter Doel$^{15}$, Andreu Font-Ribera$^{5}$, Jaime E. Forero-Romero$^{19,20}$, \newauthor Satya Gontcho A Gontcho$^{4}$, Julien Guy$^{4}$, Klaus Honscheid$^{2, 21}$, \mr{Dragan Huterer$^{22}$}, \newauthor Theodore Kisner$^{4}$, Martin Landriau$^{4}$, Michael Levi$^{4}$, Marc Manera$^{5,23}$, Aaron Meisner$^{24}$, \newauthor Ramon Miquel$^{5, 25}$, Eva-Maria Mueller$^{26}$, Adam Myers$^{27}$, Jeffrey A. Newman$^{28}$, \newauthor Jundan Nie$^{29}$, Nathalie Palanque-Delabrouille$^{4,7}$, Will Percival$^{8,9,10}$, Claire Poppett$^{4,30}$, \newauthor Graziano Rossi$^{31}$, Eusebio Sanchez$^{32}$, Michael Schubnell$^{22}$, Gregory Tarlé$^{22}$, \newauthor Benjamin Alan Weaver$^{24}$, Christophe Yèche$^{7}$, Zhimin Zhou$^{29}$, Hu Zou$^{29}$
+\author[M. Rezaie et al.]{Mehdi Rezaie$^{1,2}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,4}$, Hui Kong$^{5}$, \newauthor Anna Porredon$^{6,7}$, Lado Samushia$^{1}$, Edmond Chaussidon$^{8}$, Alex Krolewski$^{9,10,11}$, \newauthor Arnaud de Mattia$^{8}$, Florian Beutler$^{6}$, Jessica Nicole Aguilar$^{4}$, Steven Ahlen$^{12}$, \newauthor Shadab Alam$^{13}$, Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{14}$, Jose Bermejo-Climent$^{15}$, \newauthor David Brooks$^{16}$, Todd Claybaugh$^{4}$, Shaun Cole$^{17}$, Kyle Dawson$^{18}$, \newauthor Axel de la Macorra$^{19}$, Peter Doel$^{16}$, Andreu Font-Ribera$^{5}$, Jaime E. Forero-Romero$^{20,21}$, \newauthor Satya Gontcho A Gontcho$^{4}$, Julien Guy$^{4}$, Klaus Honscheid$^{2, 21}$, \mr{Dragan Huterer$^{22}$}, \newauthor Theodore Kisner$^{4}$, Martin Landriau$^{4}$, Michael Levi$^{4}$, Marc Manera$^{5,24}$, Aaron Meisner$^{25}$, \newauthor Ramon Miquel$^{5, 26}$, Eva-Maria Mueller$^{27}$, Adam Myers$^{28}$, Jeffrey A. Newman$^{29}$, \newauthor Jundan Nie$^{30}$, Nathalie Palanque-Delabrouille$^{4,8}$, Will Percival$^{9,10,11}$, Claire Poppett$^{4,31}$, \newauthor Graziano Rossi$^{32}$, Eusebio Sanchez$^{33}$, Michael Schubnell$^{23}$, Gregory Tarlé$^{23}$, \newauthor Benjamin Alan Weaver$^{25}$, Christophe Yèche$^{8}$, Zhimin Zhou$^{30}$, Hu Zou$^{30}$
 \\~\\
 % List of institutions
 $^{1}$Department of Physics, Kansas State University, 116 Cardwell Hall, Manhattan, KS 66506, USA\\ 
@@ -8,29 +8,30 @@ $^{2}$Center for Cosmology and AstroParticle Physics, The Ohio State University,
 $^{3}$Department of Physics \& Astronomy, Ohio University, Athens, OH 45701, USA\\ $^{4}$Lawrence Berkeley National Laboratory, 1 Cyclotron Road, Berkeley, CA 94720, USA\\ 
 $^{5}$Institut de F\'{i}sica d’Altes Energies (IFAE), The Barcelona Institute of Science and Technology, Campus UAB, 08193 Bellaterra Barcelona, Spain\\ 
 $^{6}$Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford Hill, Edinburgh EH9 3HJ, UK\\ 
-$^{7}$IRFU, CEA, Universit\'{e} Paris-Saclay, F-91191 Gif-sur-Yvette, France\\ 
-$^{8}$Waterloo Centre for Astrophysics, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\ 
-$^{9}$Perimeter Institute for Theoretical Physics, 31 Caroline St. North, Waterloo, ON N2L 2Y5, Canada\\ 
-$^{10}$Department of Physics and Astronomy, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\ 
-$^{11}$Physics Department, Boston University, 590 Commonwealth Avenue, Boston, MA 02215, USA\\ 
-$^{12}$Tata Institute of Fundamental Research, Homi Bhabha Road, Mumbai 400005, India\\ 
-$^{13}$Korea Astronomy and Space Science Institute, 776, Daedeokdae-ro, Yuseong-gu, Daejeon 34055, Republic of Korea\\ 
-$^{14}$Department of Physics \& Astronomy, University of Rochester, 206 Bausch and Lomb Hall, P.O. Box 270171, Rochester, NY 14627-0171, USA\\ 
-$^{15}$Department of Physics \& Astronomy, University College London, Gower Street, London, WC1E 6BT, UK\\ 
-$^{16}$Institute for Computational Cosmology, Department of Physics, Durham University, South Road, Durham DH1 3LE, UK\\ 
-$^{17}$Department of Physics and Astronomy, The University of Utah, 115 South 1400 East, Salt Lake City, UT 84112, USA\\ 
-$^{18}$Instituto de F\'{\i}sica, Universidad Nacional Aut\'{o}noma de M\'{e}xico,  Cd. de M\'{e}xico  C.P. 04510,  M\'{e}xico\\ 
-$^{19}$Departamento de F\'isica, Universidad de los Andes, Cra. 1 No. 18A-10, Edificio Ip, CP 111711, Bogot\'a, Colombia\\ 
-$^{20}$Observatorio Astron\'omico, Universidad de los Andes, Cra. 1 No. 18A-10, Edificio H, CP 111711 Bogot\'a, Colombia\\ 
-$^{21}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\ 
-$^{22}$Department of Physics, University of Michigan, Ann Arbor, MI 48109, USA\\
-$^{23}$Departament de F\'{i}sica, Universitat Aut\`{o}noma de Barcelona, 08193 Bellaterra (Barcelona), Spain\\ 
-$^{24}$NSF's NOIRLab, 950 N. Cherry Ave., Tucson, AZ 85719, USA\\ 
-$^{25}$Instituci\'{o} Catalana de Recerca i Estudis Avan\c{c}ats, Passeig de Llu\'{\i}s Companys, 23, 08010 Barcelona, Spain\\ 
-$^{26}$Department of Physics and Astronomy, University of Sussex, Brighton BN1 9QH, U.K\\ 
-$^{27}$Department of Physics \& Astronomy, University  of Wyoming, 1000 E. University, Dept.~3905, Laramie, WY 82071, USA\\ 
-$^{28}$Department of Physics \& Astronomy, University of Pittsburgh, 3941 O'Hara Street, Pittsburgh, PA 15260, USA\\ 
-$^{29}$National Astronomical Observatories, Chinese Academy of Sciences, A20 Datun Rd., Chaoyang District, Beijing, 100012, P.R. China\\ 
-$^{30}$Space Sciences Laboratory, University of California, Berkeley, 7 Gauss Way, Berkeley, CA  94720, USA\\ 
-$^{31}$Department of Physics and Astronomy, Sejong University, Seoul, 143-747, Korea\\ 
-$^{32}$CIEMAT, Avenida Complutense 40, E-28040 Madrid, Spain}
+$^{7}$Ruhr University Bochum, Faculty of Physics and Astronomy, Astronomical Institute, German Centre for Cosmological Lensing, 44780 Bochum, Germany\\ 
+$^{8}$IRFU, CEA, Universit\'{e} Paris-Saclay, F-91191 Gif-sur-Yvette, France\\ 
+$^{9}$Waterloo Centre for Astrophysics, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\ 
+$^{10}$Perimeter Institute for Theoretical Physics, 31 Caroline St. North, Waterloo, ON N2L 2Y5, Canada\\ 
+$^{11}$Department of Physics and Astronomy, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\ 
+$^{12}$Physics Department, Boston University, 590 Commonwealth Avenue, Boston, MA 02215, USA\\ 
+$^{13}$Tata Institute of Fundamental Research, Homi Bhabha Road, Mumbai 400005, India\\ 
+$^{14}$Korea Astronomy and Space Science Institute, 776, Daedeokdae-ro, Yuseong-gu, Daejeon 34055, Republic of Korea\\ 
+$^{15}$Department of Physics \& Astronomy, University of Rochester, 206 Bausch and Lomb Hall, P.O. Box 270171, Rochester, NY 14627-0171, USA\\ 
+$^{16}$Department of Physics \& Astronomy, University College London, Gower Street, London, WC1E 6BT, UK\\ 
+$^{17}$Institute for Computational Cosmology, Department of Physics, Durham University, South Road, Durham DH1 3LE, UK\\ 
+$^{18}$Department of Physics and Astronomy, The University of Utah, 115 South 1400 East, Salt Lake City, UT 84112, USA\\ 
+$^{19}$Instituto de F\'{\i}sica, Universidad Nacional Aut\'{o}noma de M\'{e}xico,  Cd. de M\'{e}xico  C.P. 04510,  M\'{e}xico\\ 
+$^{20}$Departamento de F\'isica, Universidad de los Andes, Cra. 1 No. 18A-10, Edificio Ip, CP 111711, Bogot\'a, Colombia\\ 
+$^{21}$Observatorio Astron\'omico, Universidad de los Andes, Cra. 1 No. 18A-10, Edificio H, CP 111711 Bogot\'a, Colombia\\ 
+$^{22}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\ 
+$^{23}$Department of Physics, University of Michigan, Ann Arbor, MI 48109, USA\\
+$^{24}$Departament de F\'{i}sica, Universitat Aut\`{o}noma de Barcelona, 08193 Bellaterra (Barcelona), Spain\\ 
+$^{25}$NSF's NOIRLab, 950 N. Cherry Ave., Tucson, AZ 85719, USA\\ 
+$^{26}$Instituci\'{o} Catalana de Recerca i Estudis Avan\c{c}ats, Passeig de Llu\'{\i}s Companys, 23, 08010 Barcelona, Spain\\ 
+$^{27}$Department of Physics and Astronomy, University of Sussex, Brighton BN1 9QH, U.K\\ 
+$^{28}$Department of Physics \& Astronomy, University  of Wyoming, 1000 E. University, Dept.~3905, Laramie, WY 82071, USA\\ 
+$^{29}$Department of Physics \& Astronomy, University of Pittsburgh, 3941 O'Hara Street, Pittsburgh, PA 15260, USA\\ 
+$^{30}$National Astronomical Observatories, Chinese Academy of Sciences, A20 Datun Rd., Chaoyang District, Beijing, 100012, P.R. China\\ 
+$^{31}$Space Sciences Laboratory, University of California, Berkeley, 7 Gauss Way, Berkeley, CA  94720, USA\\ 
+$^{32}$Department of Physics and Astronomy, Sejong University, Seoul, 143-747, Korea\\ 
+$^{33}$CIEMAT, Avenida Complutense 40, E-28040 Madrid, Spain}
