--- a/sections/dataavailability.tex
+++ b/sections/dataavailability.tex
@@ -1,3 +1,3 @@
 \section*{Data Availability}
 \label{sec:dataavail}
-The DR9 catalogues from the DESI Legacy Imaging Surveys are publicly available at \href{https://www.legacysurvey.org/dr9/}{https://www.legacysurvey.org/dr9/}. The software used for cleaning the imaging data is available at \href{https://github.com/mehdirezaie/sysnetdev}{https://github.com/mehdirezaie/sysnetdev}. All data points shown in the published graphs are available in a machine-readable form at \href{https://github.com/mehdirezaie/dimagfnl}{https://github.com/mehdirezaie/dimagfnl}.
+The DR9 catalogues from the DESI Legacy Imaging Surveys are publicly available at \href{https://www.legacysurvey.org/dr9/}{https://www.legacysurvey.org/dr9/}. The software used for cleaning the imaging data is available at \href{https://github.com/mehdirezaie/sysnetdev}{https://github.com/mehdirezaie/sysnetdev}. All data points shown in the published graphs are available in a machine-readable form at \href{https://zenodo.org/records/10594656}{https://zenodo.org/records/10594656}.
